# pf-payroll

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  architectural-report.md  coverage.json  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: README.md  deploy.yml  test.yml
db/: 01_schema.sql  02_seed_base.sql  03_seed_real.sql  03_seed_test.sql  schema.sql  seed.sql  seed_real.sql  seed_test.sql
docker/app/: Dockerfile.dev
docs/: api.md  architectural-report.md  database.md  deployment.md  development.md  getting-started.md  interfaces.md  local-development.md  payroll-workflow.md
jscpd-report.json/: jscpd-report.json
scripts/: adminer.sh  local_stack.sh  rancher_db.sh  write_env.sh
scripts/shared/: container_runtime.sh
src/payroll/: __init__.py  config.py
src/payroll/application/: dto.py  errors.py
src/payroll/domain/: complementary_insurance.py  contribution_calculator.py  contributions.py  deflation.py  entities.py  errors.py  tax_calculator.py  taxes.py  value_objects.py
src/payroll/interfaces/: repositories.py  session.py
src/payroll/shared/: constants.py  dates.py
tests/: conftest.py
tests/fixtures/: sample_payroll.csv
tests/helpers/: __init__.py  complementary_insurance_helpers.py  db_fakes.py  interface_stubs.py  market_data_stubs.py  reference_data.py
tests/integration/api/: test_api_auth.py  test_healthcheck.py  test_market_data.py  test_payroll_import.py  test_payroll_queries.py  test_pf_rates_integration.py  test_reference_data.py
tests/unit/: test_scaffold_modules.py
tests/unit/application/: conftest.py  test_assign_plans.py  test_compute_contributions.py  test_compute_income_tax.py  test_compute_unemployment_insurance.py  test_contribution_computation.py  test_deflate_amounts.py  test_generate_payroll_report.py  test_import_payroll.py  test_market_data_queries.py  test_payroll_query_use_case.py  test_process_imported_payroll_periods.py  test_reference_data_queries.py  test_refresh_income_tax_brackets.py  test_refresh_rates.py  test_review_payroll_period.py  test_sync_recent_market_data.py
tests/unit/domain/: test_complementary_insurance.py  test_contribution_calculator.py  test_deflation.py  test_tax_calculator.py
tests/unit/infrastructure/: test_market_data_repository.py  test_payroll_repository.py  test_rate_providers.py  test_reference_data_repository.py  (+2 more)
(+80 files in other folders)
