[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pf-payroll"
version = "0.1.0"
description = "Chilean payroll modular monolith"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30",
  "fastapi>=0.116",
  "greenlet>=3.2",
  "holidays>=0.74",
  "httpx>=0.28",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pydantic>=2.11",
  "pydantic-settings>=2.10",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.36",
  "structlog>=25.4",
  "typer>=0.16",
  "uvicorn[standard]>=0.35",
  "weasyprint>=66.0",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.5",
  "mypy>=1.18",
  "pytest>=8.4",
  "pytest-asyncio>=1.1",
  "pytest-cov>=6.2",
  "respx>=0.22",
  "ruff>=0.12",
  "testcontainers[postgres]>=4.12",
  "vulture>=2.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "strict"
filterwarnings = ["error"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["D", "E", "W", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
python_version = "3.12"

[tool.vulture]
paths = ["src"]
min_confidence = 80
sort_by_size = true

[[tool.mypy.overrides]]
module = ["pandas", "weasyprint"]
ignore_missing_imports = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
